# rmyscontrol

./: readme.md  temp.txt
motion_capture/: package.xml  setup.py
motion_capture/motion_capture/: inbetween.py  motion_capture.py
rmcontrol/: package.xml  setup.cfg  setup.py
rmcontrol/launch/: ep_control.launch.py  ep_startup.launch.py  s1_startup.launch.py
rmcontrol/rmcontrol/: RVO.py  RVO_neo.py  agent_control.py  draw_plot.py  rvo.py  strategy copy.py  strategy.py  test.ipynb  utils.py
ros2_interfaces/: CMakeLists.txt  package.xml
ros2_interfaces/msg/: Ctrl.msg  Mocap.msg  Motions.msg  Yscomm.msg
ros2_interfaces/srv/: AgentStatus.srv  Comm.srv
roscpp/: CMakeLists.txt  package.xml
roscpp/include/roscpp/: pub_pos.h
roscpp/roscpp/: utils.py
roscpp/scripts/: draw_plot.py
roscpp/src/: pub_pos.cpp
yscontrol/: package.xml  setup.cfg  setup.py
yscontrol/launch/: ys_control.launch.py
yscontrol/yscontrol/: ball_estimate.py  ball_yanshee_segment.py  checkpoint_max.pth  inference.py  test.ipynb  yscontrol.py
yscontrol/yscontrol/mods/: YanAPI.py
yscontrol/yscontrol/mods/lib_ukit/: lib_send.py
yscontrol/yscontrol/mods/lib_ukit/lib_ukit/: data_pb2.py  header_pb2.py
